# media_downloader

./: .gitignore  LICENCE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
media_downloader/: client.py
media_downloader/audio_video/: __init__.py
media_downloader/image/extractors/: reddit.py
media_downloader/image/utils/: image_utils.py
multimedia_downloader/: client.py
multimedia_downloader/audio_video/: downloader.py  utils.py
multimedia_downloader/exceptions/: errors.py
multimedia_downloader/image/: dispatcher.py  downloader.py
multimedia_downloader/image/extractors/: generic.py  instagram.py  twitter.py  unsplash.py  youtube.py
multimedia_downloader/utils/: file_manager.py
test/: test_script.py
