[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media_downloader"
version = "1.0.0"
description = "Universal media downloader for images, videos, and audio from multiple platforms"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Jash Jani" }]

dependencies = [
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "instaloader>=4.10",
    "yt-dlp>=2024.1.0"
]

[project.urls]
Homepage = "https://github.com/JashJani02/media_downloader"
Repository = "https://github.com/JashJani02/media_downloader"
Issues = "https://github.com/JashJani02/media_downloader/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["media_downloader*"]
exclude = ["test*"]